Termino de Pulir Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
@@ -50,12 +50,12 @@ Si dos entidades se quieren comunicar exitosamente, deben usar el mismo lenguaje
 ### Arquitecturas de Protocolos en Capas
 
 - **Modelo OSI** (Open Systems Interconection) desarrollado por la Organización Internacional de Estandarización en 1984, es un modelo de 7 niveles para la interconexión o entornos de sistemas abiertos y heterogéneos. Sus capas son las siguientes:
-	1. **Aplicación**: Proporciona el acceso al entorno OSI para los usuarios y también proporciona servicios de información distribuida.
-	2. **Presentación**: Proporciona a los procesos de aplicación independencia respecto a las diferencias en la representación de los datos.
+	1. **Aplicación**: Proporciona el acceso al entorno OSI para los usuarios y también proporciona servicios de información distribuida, este nivel esta generalmente integrado por todos los distintos protocolos.
+	2. **Presentación**: Proporciona a los procesos de aplicación independencia respecto a las diferencias en la representación de los datos. Esta capa se encarga de la sintaxis y la semántica de la información a transmitir.
 	3. **Sesión**: Proporciona el control de la comunicación entre las aplicaciones: establece, gestiona y cierra las comunicaciones o sesiones entre las aplicaciones cooperadoras.
-	4. **Transporte**: Proporciona seguridad, transferencia transparente de datos entre los puntos finales, además proporciona procedimientos de recuperación de errores y control de flujo *origen-destino*.
+	4. **Transporte**: Proporciona seguridad, transferencia transparente de datos entre los puntos finales, además proporciona procedimientos de recuperación de errores y control de flujo *origen-destino*. La capa de transporte es una verdadera capa de extremo a extremo; lleva los datos por toda la ruta desde el origen hasta el destino, ademas determina el tipo de servicio que debe proveer a la capa de sesión.
 	5. **Red**: Proporciona independencia a los niveles superiores respecto a las técnicas de conmutación y de transmisión utilizadas para conectar los sistemas, esta capa es la responsable del establecimiento, mantenimiento y cierre de la conexión.
-	6. **Enlaces de Datos**: Proporciona un servicio de transferencia de datos seguro a través del enlace físico; envía bloques de datos, llamados tramas, llevando a cavo la sincronización, el control de errores y de flujo necesarios.
+	6. **Enlaces de Datos**: Proporciona un servicio de transferencia de datos seguro a través del enlace físico; envía bloques de datos, llamados tramas, de forma secuencial, llevando a cavo la sincronización, el control de errores (enmascara los errores reales) y de flujo necesarios.
 	7. **Física**: Se encarga de la transmisión de cadenas de bits no estructurados sobre el medio físico; está relacionada con las características mecánicas, eléctricas, funcionales y de procedimiento para acceder a los medios físicos.
 
 >[!tldr] Inconvenientes del Modelo OSI
@@ -67,15 +67,21 @@ Si dos entidades se quieren comunicar exitosamente, deben usar el mismo lenguaje
 >4. **Mala Política**: Debido a su temprana estandarización y empuje por parte de las instituciones gubernamentales, existía un sentimiento de imposición que generaba rechazo en los académicos y profesionales del sector. 
 
 - **Modelo TCP/IP** (Transmission Control Protocol/ Internet Protocol), es un modelo de 4 capas basado en modelo OSI, adoptado para la interconexión de sistemas. Este modelo es el más ampliamente usado, ya que es independiente a la plataforma en la que se esté utilizando, al contrario del modelo OSI tradicional que varía según su implementación.
-	1. **Aplicación**: Ésta contiene todos los protocolos de alto nivel, que implementan el modelo TCP/IP.
+	1. **Aplicación**: Contiene todos los protocolos de alto nivel, que implementan el modelo TCP/IP.
 	2. **Transporte**: Permite que las entidades pares, en los nodos de origen y de destino, lleven a cabo una conversación. En esta capa se definieron dos protocolos de transporte de extremo a extremo:
 		1. **TCP**: Protocolo orientado a la conexión que permite que un flujo de bytes originado en una máquina se entregue sin errores a cualquier otra máquina en la interred.
 		2. **UDP**: Protocolo sin conexión, no confiable para aplicaciones que no desean la asignación de secuencia o el control de flujo de TCP y prefieren proveerlos por su cuenta. Se utiliza mucho para las consultas de tipo *petición-respuesta*.
-	3. **Interred**: Permite que los hosts inyecten paquetes en cualquier red y que viajen de manera independiente hacia el destino, incluso pueden llegar en un orden totalmente diferente al orden en que se enviaron, en cuyo caso es responsabilidad de las capas más altas volver a ordenarlos.
-	4. **Enlace**: Describe qué enlaces se deben llevar a cabo para cumplir con las necesidades de esta capa de interred sin conexión.
+	3. **Interred**: Define un formato de paquete y un protocolo oficial llamado *IP* además de un protocolo complementario llamado *ICMP* (Internet Control Message Protocol) que le ayuda a funcionar. La tarea de la capa de interred es entregar los paquetes IP a donde se supone que deben ir.
+	4. **Enlace**: Describe qué enlaces se deben llevar a cabo para cumplir con las necesidades de esta capa de interred sin conexión. En realidad no es una capa en el sentido común del término, sino una interfaz entre los hosts y los enlaces de transmisión.
 
 >[!tldr] Unidades de Datos Utilizados por los Protocolos
 >Los datos de usuario constituyen un bloque de información, al cual cada capa agrega un encabezado con información de control. La unión de datos de usuario y el encabezamiento se denomina unidad de datos del protocolo (PDU).
+
+#### Unidad de Datos del Protocolo
+
+Los PDU, o Unidades de Datos de Protocolo, son bloques de información que se utilizan y reconocen en diferentes capas en los protocolos de red. Cada PDU contiene no solo los datos que quieres enviar, sino también la información necesaria para que esos datos lleguen a su destino de la manera correcta. Esta información extra puede incluir direcciones, información de control, error checking y otros metadatos.
+
+![[PDU-capas.png]]
 
 ## Normalización y Estandarización de los Sistemas de Comunicación
 
