Termino la refactorización y pequeñas correcciones en calculo

--- a/4º Año/Calculo Numerico/Unidad 1/1. Mediciones y Errores.md
+++ b/4º Año/Calculo Numerico/Unidad 1/1. Mediciones y Errores.md
@@ -27,7 +27,7 @@ $$
 
 Al usar la computadora, se usa el sistema binario, donde $b = 2$, y las cifras o dígitos en esa base de este sistema numérico compuesta por el conjunto {0, 1} se denominan “bits”
 
-1. Para representar **números enteros** tradicionalmente, se usan dos bytes para representar los números de *simple precisión, 4 bytes para la *doble precisión*. En ambos casos el primer bit se reserva para el signo. Debido a las propiedades de las potencias de 2, en algunos ordenadores los números negativos se representan como el ***complemento a 2***, es decir, $x \longrightarrow x + 2 - 2^{16}$.
+1. Para representar **números enteros** tradicionalmente, se usan dos bytes para representar los números de *simple precisión*, 4 bytes para la *doble precisión*. En ambos casos el primer bit se reserva para el signo. Debido a las propiedades de las potencias de 2, en algunos ordenadores los números negativos se representan como el ***complemento a 2***, es decir, $x \longrightarrow x + 2 - 2^{16}$.
 2. Para representar números reales, se lo puede hacer de dos formas:
 	1. Punto Fijo -> Se considera un número fijo $n$ de decimales, cortando esa cantidad en t-dígitos, tal que $t < n$. Por Ej.: $n = 6$ y $t=4$, el mayor número en este caso sería el 99,9999 mientras que el menor sería 0,0004.
 	2. Punto Flotante -> La representación de punto flotante se corresponde con la notación científica normalizada, dada por la siguiente expresión:
