Completando Redes, correcciones MS II

--- a/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
@@ -99,4 +99,8 @@ Las organizaciones de *normalización* definen las características de los equip
 >- Desventajas:
 >	- Tiende a congelar el desarrollo de la tecnología.
 
-Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación.
+Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación. La conexión entre aplicaciones a nivel lógico es a través de los puertos, ya que son los procesos de usuario los que reciben información por los puertos asignados como tal, estos puertos deben ser exclusivos para cada aplicación.
+
+>[!note] La Dirección Física - MAC
+>La MAC es una dirección de tipo Ethernet de 48 bits, la cual indica exactamente donde está ejecutándose un proceso de forma física.
+
