--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
@@ -34,7 +34,7 @@ Al igual que DNS, el protocolo HTTP se basa en la arquitectura o modelo cliente-
 El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP como protocolo de transporte. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
 Este protocolo cuenta con múltiples versiones, su versión 2 concretamente, fue diseñada para ser el protocolo de próxima generación para aplicaciones web, introduciendo nuevos mecanismos significativos, para empezar funciona en la capa superior de TCP, es decir, en la ***capa de seguridad de transporte (TLS)***. A su vez lógicamente se divide en tres niveles:
 
-1. **Nivel de Transmisión**: Abarcando el control de flujo, streams y tramas.
+1. **Nivel de Transmisión**: Abarca el control de flujo, streams y tramas.
 2. **HPACK**: Se encarga de la codificación binaria y de implementar los protocolos de compresión.
 3. **Nivel Semántico**: se encarga de la interpretación y el significado de las acciones específicas que deben llevarse a cabo en respuesta a los comandos HTTP.
 
