--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
@@ -23,7 +23,7 @@ La forma en la que este sistema pueden resolver los direccionamientos desde el c
 >Supongamos que queremos entrar a www.fcad.uner.edu.ar, los DNS empiezan a resolver las URL de atrás hacia adelante, en este caso primero iría a la carpeta ***ar***, a continuación a la carpeta ***edu***, siguiendo con la carpeta ***uner*** y por último se dirigiría al recurso que es ***fcad***.
 
 Cada nodo en Internet cuenta con una dirección IP única, además de contar con en nombre de dominio, el cual queda especificado en su URL. Dichos nombres pueden tener asignados más de una dirección IP, por ejemplo, Netflix posee múltiples nodos en distintas regiones del mundo con el fin de repartir la carga del sitio de forma uniforme y rotativa.
-Además, una dirección IP puede estar asociada a más de nombre, lo que significa que varios servicios están alojados de forma física en el mismo equipo; a esto se lo denomina *hosting*.
+Además, una dirección IP puede estar asociada a más de un nombre de dominio, lo que significa que varios servicios están alojados de forma física en el mismo equipo; a esto se lo denomina *hosting*.
 
 >[!tldr] Características Principales del Sistema de Nombres de Dominio (DNS)
 >1. La principal funcionalidad de este sistema es la de realizar la correspondencia de nombres a IPs y viceversa.
@@ -45,7 +45,7 @@ Al proceso de buscar un nombre y encontrar una dirección se le conoce como ***r
 La forma en la que se resuelven los nombres de dominio puede darse de dos formas:
 
 - **Iterativa**: El agente retiene el control sobre el proceso de resolución y llama a cada uno de los servidores de nombres. La consulta comienza por el primer servidor del ***pathname***.
-- **Recursiva**: El agente envía el requerimiento al sistema de nombres raíz y este servidor se encarga de contactarse con los demás servidores de nombres, hasta encontrar el objeto en el último nombre del ***pathname***, en pocas palabras delega toda la resolución a los demás sistemas de nombres.
+- **Recursiva**: El agente envía el requerimiento al sistema de nombres raíz y este servidor se encarga de contactarse con los demás servidores de nombres, hasta encontrar el objeto en el último nombre del ***pathname***, en pocas palabras delega toda la resolución a los demás sistemas de nombres. Esta forma suele ser la más ampliamente usada debido a su eficiencia.
 
 >[!tldr] Sistema de Caching de los Servidores DNS
 >Cuando un servidor DNS resuelve la dirección IP de un nombre de dominio, almacena temporalmente esa información en su caché. El propósito de esta caché es reducir la necesidad de futuras búsquedas para el mismo nombre de dominio, lo que ahorra tiempo y reduce la carga en los servidores DNS.
@@ -55,13 +55,13 @@ La forma en la que se resuelven los nombres de dominio puede darse de dos formas
 
 Los servidores DNS que implementan conjuntamente la base de datos distribuida DNS almacenan los **registros de recursos**, los cuales brindan información sobre cómo deben ser manejados los nombres de dominio. Incluyendo los que proporcionan las correspondencias entre nombre de host y dirección IP. Cada mensaje de respuesta DNS transporta uno o más registros de recursos. Cada registro de recurso tiene un tipo que indica la clase de información que contiene.
 
-- ***SOA (Start Of Authority)***: dirección del responsable de la administración; nombre del huésped donde se pueden buscar los datos en la zona.
-- ***A (Address)***: dirección IP del huésped que permite las comunicaciones.
-- ***MX (Mail eXchange)***: enlace simbólico al servidor de correos.
-- ***SRV (SerVeR)***: nombre de un servidor para un servicio específico.
-- **NS (Name Servers)**: servidores de nombres.
+- ***SOA (Start Of Authority)***: Proporciona el nombre de la fuente primaria de información sobre la zona del servidor de nombres, la dirección de correo electrónico de su administrador, un número de serie único, varias banderas y temporizadores.
+- ***A (Address)***: Contiene una dirección *IPv4* de 32 bits de una interfaz para algún host.
+- ***MX (Mail eXchange)***: especifica el nombre del host que está preparado para aceptar correo electrónico del dominio especificado. Se utiliza porque no todas las máquinas están preparadas para aceptar correo electrónico.
+- ***SRV (SerVeR)***: Permite identificar a un host para un servicio dado en un dominio, es una generalización del registro MX, es decir, nos permite especificar un host que provea un servicio particular.
+- **NS (Name Servers)**: Especifica un servidor de nombres para el dominio o subdominio. Es un host que tiene una copia de la base de datos para un dominio. Se utiliza como parte del proceso para buscar nombres.
 - **CNAME**: DNS distingue alias de lo que se llama nombres canónicos. Se asume que cada huésped tiene un nombre canónico o primario. Un alias se implementa en un nodo almacenándolo en un registro llamado CNAME.
-- **PTR (PoinTeR)**: mapa inverso de direcciones IP a los nombres de los huéspedes.
+- **PTR (PoinTeR)**: Asociar un nombre a una dirección IP con el fin de permitir búsquedas de la dirección IP y devolver el nombre de la máquina correspondiente.
 
 El sistema de nombres de dominio define solo dos tipos de mensajes, los de respuesta y los de consulta, independientemente del tipo de mensaje se utiliza un solo tipo de formato, véase la imagen.
 
