Unidad 3 DB, Topología agregado CyR, Recomendaciones diagrama de actividad MS II

--- a/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
@@ -19,10 +19,6 @@ El sistema de transmisión que comunica el origen y el destino, puede ser:
 - **LAN** (Local Area Network = Red de Área Local): red que cubre un ámbito geográfico reducido, como por ejemplo una oficina o un edificio; por lo general este tipo de redes son privadas.
 - **WAN** (Wide Area Network = Red de Área Extensa): cubren un área mayor, usan redes de acceso público, como la telefónica, y están conformadas por la interconexión de nodos de conmutación.
 
->[!example] Topología de las Redes
->- **Punto a Punto**: El mensaje es recibido solamente por la estación destinataria.
->- **Multipunto**: Múltiples nodos de emisión y recepción conectados a un único canal compartido. Cualquier nodo transmite tramas y cada uno de los demás recibe una copia, este tipo de topología de red requiere ser gestionada de forma adecuada, para aprovechar al máximo los recursos.
-
 Además, las redes pueden ser conectadas entre ellas a través de distintos modelos de redes, principalmente dos:
 
 - **PAN** (Metropolitan Area Network = Red de Área Metropolitana): interconectan varias redes LAN en una zona geográficamente cercana, un ejemplo de esto puede ser WiMax, MetroEthernet.
@@ -32,9 +28,17 @@ Además, las redes pueden ser conectadas entre ellas a través de distintos mode
 >- **Nodos Adyacentes**: Los nodos adyacentes se refieren a aquellos nodos en una red que están directamente conectados entre sí por un enlace. En otras palabras, hay una conexión física directa entre estos nodos.
 >- **Nodos Cercanos**: Puede referirse a nodos que están en la proximidad uno del otro en términos de estructura de red, pero no necesariamente conectados directamente por una sola arista. La cercanía puede implicar nodos que están a pocos saltos de distancia.
 
+>[!example] Topología de las Redes
+>Una topología de red se refiere a la disposición física y lógica de los nodos y las conexiones entre ellos en una red informática. Esta estructura determina cómo se transmiten los datos de un dispositivo a otro y cómo se organizan los dispositivos para optimizar la comunicación y el rendimiento de la red. Algunas de las topologías más conocidas son:
+>- **Punto a Punto**: El mensaje es recibido solamente por la estación destinataria.
+>- **Multipunto o Estrella**: Múltiples nodos de emisión y recepción conectados a un único canal compartido. Cualquier nodo transmite tramas y cada uno de los demás recibe una copia, este tipo de topología de red requiere ser gestionada de forma adecuada, para aprovechar al máximo los recursos.
+>- **Anillo**: Los dispositivos están conectados en un circuito cerrado o anillo. La información se transmite en una dirección alrededor del anillo, pasando por cada dispositivo hasta llegar a su destino.
+>- **Malla**: Cada dispositivo tiene una conexión directa con todos los demás dispositivos de la red. Esto proporciona múltiples rutas para que la información llegue de un punto a otro, lo que mejora la redundancia y la resistencia de la red.
+>- **Árbol**: Combina características de las topologías de estrella y de bus. Los dispositivos se conectan en grupos que se asemejan a estrellas, y estos grupos están conectados en una jerarquía lineal como en una topología de bus.
+
 ## Modelos de Arquitectura de Comunicaciones
 
-El modelo adoptado para visualizar la estructura de una arquitectura de comunicaciones, está basado en capas o niveles, como si de una cebolla se tratase. Los entornos de redes se organizan en niveles para reducir la complejidad del diseño, donde cada nivel o capa brinda servicios a su capa superior, y cada capa es independiente de las demás.
+El modelo adoptado para visualizar la estructura de una arquitectura de comunicaciones, está basado en capas o niveles. Los entornos de redes se organizan en niveles para reducir la complejidad del diseño, donde cada nivel o capa brinda servicios a su capa superior, y cada capa es independiente de las demás.
 La comunicación entre dos capas pares, en dos máquinas distintas, se hace a través de un **protocolo**. Algunos conceptos claves que se deben saber son los siguientes:
 
 - **Protocolo entre pares**: Secuencia de mensajes intercambiados entre dos entidades de igual nivel.
@@ -50,12 +54,12 @@ Si dos entidades se quieren comunicar exitosamente, deben usar el mismo lenguaje
 ### Arquitecturas de Protocolos en Capas
 
 - **Modelo OSI** (Open Systems Interconection) desarrollado por la Organización Internacional de Estandarización en 1984, es un modelo de 7 niveles para la interconexión o entornos de sistemas abiertos y heterogéneos. Sus capas son las siguientes:
-	1. **Aplicación**: Proporciona el acceso al entorno OSI para los usuarios y también proporciona servicios de información distribuida, este nivel esta generalmente integrado por todos los distintos protocolos.
+	1. **Aplicación**: Proporciona el acceso al entorno OSI para los usuarios y también proporciona servicios de información distribuida, este nivel está generalmente integrado por todos los distintos protocolos.
 	2. **Presentación**: Proporciona a los procesos de aplicación independencia respecto a las diferencias en la representación de los datos. Esta capa se encarga de la sintaxis y la semántica de la información a transmitir.
 	3. **Sesión**: Proporciona el control de la comunicación entre las aplicaciones: establece, gestiona y cierra las comunicaciones o sesiones entre las aplicaciones cooperadoras.
-	4. **Transporte**: Proporciona seguridad, transferencia transparente de datos entre los puntos finales, además proporciona procedimientos de recuperación de errores y control de flujo *origen-destino*. La capa de transporte es una verdadera capa de extremo a extremo; lleva los datos por toda la ruta desde el origen hasta el destino, ademas determina el tipo de servicio que debe proveer a la capa de sesión.
+	4. **Transporte**: Proporciona seguridad, transferencia transparente de datos entre los puntos finales, además proporciona procedimientos de recuperación de errores y control de flujo *origen-destino*. La capa de transporte es una verdadera capa de extremo a extremo; lleva los datos por toda la ruta desde el origen hasta el destino, además determina el tipo de servicio que debe proveer a la capa de sesión.
 	5. **Red**: Proporciona independencia a los niveles superiores respecto a las técnicas de conmutación y de transmisión utilizadas para conectar los sistemas, esta capa es la responsable del establecimiento, mantenimiento y cierre de la conexión.
-	6. **Enlaces de Datos**: Proporciona un servicio de transferencia de datos seguro a través del enlace físico; envía bloques de datos, llamados tramas, de forma secuencial, llevando a cavo la sincronización, el control de errores (enmascara los errores reales) y de flujo necesarios.
+	6. **Enlaces de Datos**: Proporciona un servicio de transferencia de datos seguro a través del enlace físico; envía bloques de datos, llamados tramas, de forma secuencial, llevando a cavo la sincronización, el control de errores (enmascara los errores reales) y de flujo necesario.
 	7. **Física**: Se encarga de la transmisión de cadenas de bits no estructurados sobre el medio físico; está relacionada con las características mecánicas, eléctricas, funcionales y de procedimiento para acceder a los medios físicos.
 
 >[!tldr] Inconvenientes del Modelo OSI
@@ -98,6 +102,8 @@ Las organizaciones de *normalización* definen las características de los equip
 >	- Asegura la comunicación entre productos de múltiples proveedores.
 >- Desventajas:
 >	- Tiende a congelar el desarrollo de la tecnología.
+
+---
 
 Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación. La conexión entre aplicaciones a nivel lógico es a través de los puertos, ya que son los procesos de usuario los que reciben información por los puertos asignados como tal, estos puertos deben ser exclusivos para cada aplicación.
 
