--- a/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
@@ -40,9 +40,6 @@ Los diagramas de actividad constan con los siguientes elementos:
 - **Decisiones en el Diagrama de Actividades:** Casi siempre en un Diagrama de Actividades se llegará a un punto donde se realizará alguna decisión de tipo excluyente, donde solo se pueda ir por un solo camino, esta situación se puede representar de dos formas: 
 	1. Mostrar las rutas posibles que parten directamente una actividad. 
 	2. Llevar la transición hacia un rombo y de allí direccionar a las diferentes decisiones. 
-
-![[actividades_ejemplo.png]]
-
 - **Rutas Concurrentes**: Conforme como se modele las actividades, se tendrá la oportunidad de separar la transición en dos rutas que se ejecutan al mismo tiempo y luego se reúna.
 
 ![[rutas_concurrentes_actividades.png]]
@@ -50,6 +47,12 @@ Los diagramas de actividad constan con los siguientes elementos:
 - **Indicaciones:** Es posible enviar una indicación. Cuando se reciba, la indicación provocará que se ejecute una actividad. El símbolo para enviar la indicación es un pentágono convexo y el que recibe un pentágono cóncavo.
 
 ![[indicaciones_actividades.png]]
+
+>[!caution] Consideraciones a Tener en Cuenta
+>- Las actividades se reparten entre los diferentes actores que interactúen en ese caso, estos actores se colocan de forma horizontal en la parte superior del diagrama y se coloca una línea vertical para delimitar las actividades realizadas por cada actor.
+>- Todo el diagrama fluye de forma descendente.
+>- Las salidas de una bifurcación condicional siempre deben ir hacia una actividad, no se puede ir de un condicional a otro.
+>- En los condicionales la secuencia del "Si" siempre se coloca hacia abajo y el "No" va a depender, en caso de que se necesite retornar a actividades anteriores el "*No*" sale por la izquierda del rombo, pero en el caso de que dicha secuencia tenga un desarrollo más elaborado que involucre una serie de actividades, entonces el flujo saldrá por la derecha.
 
 ### Diagrama de Secuencias
 
@@ -98,7 +101,7 @@ El diagrama de clases cuenta con los siguientes componentes:
 
 ![[componentes_clases.png]]
 
-- **Clase:** Las clases están compuestas por nombres, generalmente expresados en singular, atributos, y métodos, dichos métodos tienen diferentes tipos de accesibilidad (provada, pública y protegida)
+- **Clase:** Las clases están compuestas por nombres, generalmente expresados en singular, atributos, y métodos, dichos métodos tienen diferentes tipos de accesibilidad (privada, pública y protegida)
 - **Paquetes:** Agrupan lógicamente las clases que tienen alguna relación entre sí. Estas clases se pueden agrupar de acuerdo a sus funcionalidades o basándose en como está compuesta la aplicación
 - **Relaciones:** Las clases pueden conectarse con otras clases de diferentes formas, estas conexiones se llaman relaciones. 
 	- **Uso:** Indica que una clase utiliza uno o varios métodos que se encuentran en el objeto con el que se está relacionando, con frecuencia este tipo de relación también se llama relación de dependencia.
@@ -106,7 +109,7 @@ El diagrama de clases cuenta con los siguientes componentes:
 	- **Agregación:** Se utiliza para una clase que contiene muchos elementos de otro tipo, ahora bien, esta relación se dice que es de tipo débil, ya que puede que la clase no tenga ningún objeto.
 	- **Composición:** Es una relación de agregación fuertemente ligada, es decir, que por lo menos debe existir un objeto de la clase contenida en la clase contenedora para que exista la relación.
 	- **Asociación:** Cuando los objetos de una clase tienen alguna referencia con objetos de otra clase, se utiliza una relación de asociación. La relación de Asociación debe tener: 
-		1. **Dirección:** Indica qué clase tiene la referencia a qué clase si no hay flecha indica que las dos clases se conocen entre sí. 
+		1. **Dirección:** Indica qué clase tiene la referencia a qué clase, si no hay flecha indica que las dos clases se conocen entre sí. 
 		2. **Multiplicidad:** Indica cuantos de esos objetos de esa clase pueden ser instaciados dentro de un objeto de otro tipo.
 		3. **Nombre:** Sirve para identificar la relación en el diagrama.
 
