--- a/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
@@ -90,6 +90,27 @@ Cuya interpretación sería: todos los conjuntos de tuplas para el cuales el pre
 	- $\exists \ t \in r(Q(t))$ -> Existe una tupla $t$ en la relación $r$ tal que el predicado $Q(t)$ es verdadero.
 	- $\forall \ t \in r(Q(t))$ -> $Q$ es verdadero para toda tupla $t$ en la relación $r$.
 
+>[!example] Ejemplos de Consultas con el Cálculo Relacional de Tuplas
+>Supongamos que queremos filtrar todas las tuplas de una relaciones que satisfagan una condición, por ejemplo, todos los préstamos superiores a los 1200 dólares, eso se conseguiría de la siguiente manera:
+>$$
+>\{t| t \in prestamo \ \land t[importe] > 1200\}
+>$$
+>Supóngase que sólo se desea obtener el atributo *numero_prestamo*, en vez de todos los atributos de la relación préstamo. Para escribir esta consulta en cálculo relacional de tuplas hay que incluir una expresión de relación sobre el esquema, quedándonos de la siguiente manera:
+>$$
+>\{t | \exists s \in prestamo (t[numero\_prestamo] = s[numero\_prestamo] \land s[importe] > 1200)\}
+>$$
+>La variable tupla $t$ solo se define para el atributo numero_prestamo, dado que es el único atributo para el que se especifica una condición para $t$. Por tanto, el resultado es una relación de **(*numero_prestamo*)**.
+>Supongamos que queremos realizar la operación de división, pero en el cálculo relacional de tuplas, queremos listar a todos los clientes que tengan una cuenta en todas las sucursales de "*Arganzuela*", eso se logra de la siguiente manera:
+>$$
+>\begin{align*}
+>\{t| \exists \ r \in cliente (r[nombre\_cliente] = t[nombre\_cliente]) \ \land \\ 
+>(\forall \ u \in sucursal (u[ciudad\_sucursal] = \text{"Arganzuela"} ) \Rightarrow \\ 
+>\exists \ s \in impostor (t[nombre\_cliente] = s[nombre\_cliente] \\ 
+>\land \ \exists \ w \in cuenta (w[numero\_cuenta] = s[numero\_cuenta] \\ 
+>\land \ w[nombre\_sucursal] = u[nombre\_sucursal])))\}
+>\end{align*}
+>$$
+
 ### Cálculo Relacional de Dominio
 
 Es un lenguaje de consulta declarativo, equivalente en poder al cálculo relacional de tuplas, donde cada consulta es una expresión de la forma:
@@ -97,3 +118,23 @@ $$
 \{<X_1, X_2, \dots X_n>| P(X_1, X_2, \dots X_n)\}
 $$
 En donde $X_1, X_2, \dots X_n$ representan a los atributos de las tuplas pertenecientes a una relación y $P$ es una fórmula similar a la del cálculo de predicados definido en el cálculo relacional de tuplas.
+
+>[!example] Ejemplos de Consultas con el Cálculo Relacional de Dominio
+>Por cuestiones prácticas tomaremos los mismos ejemplos que dimos en el cálculo relacional de tuplas, pero esta vez escritas en esta notación.
+>Para determinar todos los préstamos que tienen un importe mayor a 1200 dorales, la petición se realizaría de la siguiente manera:
+>$$
+>\{<p,s,i>| <p,s,i> \in prestamo \land i > 1200\}
+>$$
+>En este caso del lado izquierdo expresamos todos los atributos de retorno, y del lado derecho todas las condiciones a cumplir, en caso de que solo queramos saber el número de los préstamos con monto superior a 1200 dólares, entonces la petición se haría de esta forma:
+>$$
+>\{<p>| \exists s,i (<p,s,i> \in prestamo \land i > 1200)\}
+>$$
+>Aunque la segunda consulta tenga un aspecto muy parecido al de la que se escribió para el cálculo relacional de tuplas, hay una diferencia importante. En el cálculo de tuplas, cuando se escribe $\exists s$ para alguna variable tupla $s$, se vincula inmediatamente con una relación escribiendo $\exists s \in r$. Sin embargo, cuando se usa $\exists s$ en el cálculo de dominios, $b$ no se refiere a una tupla, sino a un valor de dominio. Por tanto, el dominio de la variable $s$ no está restringido hasta que la subfórmula $< p, s, i > \in prestamo$ restringe $s$ a los nombres de sucursal que aparecen en la relación préstamo.
+>En caso de que queramos traer los nombres de todas las personas que tienen una cuenta en todas las sucursales de "*Arganzuela*", lo haríamos de la siguiente manera:
+>$$
+>\begin{align*}
+>\{<n> | \exists \ d,c(<n, d, c> \in cliente \land \forall \ x,y,z(<x,y,z> \in prestamo \land y = \text{"Arganzuela"} \Rightarrow \\
+>\exists \ a,b (<a,x,b> \in cuenta \ \land <n, a> \in impositor))\}
+>\end{align*}
+>$$
+
